# mc-server-scanner

./: .gitignore  Cargo.toml  README.md
data/: resume-masscan.sh  start-masscan.sh
src/: common.rs  config.rs  html-gui-server.rs  main.rs  pinger.rs  server-list.html  server-list.rs
