[package]
name = "mc-server-scanner"
version = "1.0.2"
authors = ["Wojciech Paruch <gpewojan1@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[[bin]]
name = "pinger"
path = "src/pinger.rs"

[[bin]]
name = "server-list"
path = "src/server-list.rs"

[dependencies]
craftping = { version = "0", features = ["async-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
bincode = "1"
serde = "1"
actix-web = "4"
html-escape = "0"
base64 = "0"
